--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         </head>
 
     <body>
-        <h1>Colégio Estadual Vicente Tomazini</h1>
+        <div>
+            <img src="aluno.jpg" class="aluno1">
+            <img src="aluno.jpg" class="aluno2">
+            <h1>Colégio Estadual Vicente Tomazini</h1> 
+        </div> 
+
         <p>O colégio se localiza no centro da cidade</p>
 
 
